--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@svgr/webpack": "4.3.2",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.2",
-    "@types/react": "16.9.2",
     "@types/react-dom": "16.8.5",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
@@ -136,5 +135,10 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.2",
+    "less": "^3.10.1",
+    "less-loader": "^5.0.0"
   }
 }
