--- a/package.json
+++ b/package.json
@@ -40,10 +40,7 @@
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
     "postcss-normalize": "7.0.1",
-    "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
@@ -139,6 +136,13 @@
   "devDependencies": {
     "@types/react": "^16.9.2",
     "less": "^3.10.1",
-    "less-loader": "^5.0.0"
+    "less-loader": "^5.0.0",
+    "postcss-aspect-ratio-mini": "^1.0.1",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-px-to-viewport": "^1.1.1",
+    "postcss-viewport-units": "^0.1.6",
+    "postcss-write-svg": "^3.0.1"
   }
 }
