--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "postcss-preset-env": "^6.7.0",
     "postcss-px-to-viewport": "^1.1.1",
     "postcss-viewport-units": "^0.1.6",
-    "postcss-write-svg": "^3.0.1"
+    "postcss-write-svg": "^3.0.1",
+    "webpack-bundle-analyzer": "^3.4.1"
   }
 }
